--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
        </div>
       <div class="skill_sec">
-     <img src="project_2.jpg">
+     <img src="Project_2.jpg">
    </div>
     <div class="mount">
     <h2>
@@ -54,7 +54,7 @@
         </div>
          <div skill_sec_2>
           <div class="project">
-           <img src="project_3.jpg">
+           <img src="Project_3.jpg">
             <h2>
              Atass & Andersen
               </h2>
